--- a/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
@@ -2,5 +2,6 @@
 
 {% block fos_user_content %}
     <h1>This is your dashboard</h1>
+    <p>Your ID: {{ user_id }}</p>
 
 {% endblock fos_user_content %}
