Add bootstrap to layout template in MainBundle Edit UserBundle templates

--- a/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
@@ -2,8 +2,12 @@
 {% extends "CorvusMainBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-    <h1>Prisijungimas</h1>
-{{ render(controller('FOSUserBundle:Security:login')) }}
-    <h1>Registracija</h1>
-{{ render(controller('FOSUserBundle:Registration:register')) }}
+    <div class="col-md-5">
+        <h1>Prisijungimas</h1>
+        {{ render(controller('FOSUserBundle:Security:login')) }}
+    </div>
+    <div class="col-md-5 col-md-offset-1">
+        <h1>Registracija</h1>
+        {{ render(controller('FOSUserBundle:Registration:register')) }}
+    </div>
 {% endblock fos_user_content %}
