--- a/src/Corvus/MainBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/layout.html.twig
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div>
@@ -25,9 +27,14 @@
             {% endfor %}
         {% endif %}
 
-        <div>
-            {% block fos_user_content %}
-            {% endblock fos_user_content %}
+        <div class="container-fluid login-wrapper">
+            <div class="row text-center">
+                <h1>Grupinis maisto užsakymas</h1>
+            </div>
+                <div class="col-md-8 col-md-offset-2">
+                    {% block fos_user_content %}
+                    {% endblock fos_user_content %}
+                </div>
         </div>
     </body>
 </html>
