Remove log in link from log in page. Add log out link in dashboard page.

--- a/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
@@ -3,5 +3,6 @@
 {% block fos_user_content %}
     <h1>This is your dashboard</h1>
     <p>Your ID: {{ user_id }}</p>
+    <a href="{{ path('fos_user_security_logout') }}">Logout</a>
 
 {% endblock fos_user_content %}
