--- a/src/Corvus/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/Security/login.html.twig
@@ -9,8 +9,8 @@
     <form action="{{ path("fos_user_security_check") }}" method="post">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
         <div class="form-group">
-            <label for="username">{{ 'security.login.username'|trans }}</label>
-            <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+            <label for="username">{{ 'form.email'|trans }}</label>
+            <input type="email" class="form-control" id="username" name="_username" required="required"/>
         </div>
         <div class="form-group">
             <label for="password">{{ 'security.login.password'|trans }}</label>
