change liethuanian text to english.

--- a/src/Corvus/MainBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/layout.html.twig
@@ -20,7 +20,7 @@
 
         <div class="container-fluid login-wrapper">
             <div class="row text-center">
-                <h1>Grupinis maisto užsakymas</h1>
+                <h1>Massive food order</h1>
             </div>
                 <div class="col-md-8 col-md-offset-2">
                     {% block fos_user_content %}
