Fix user uri's, user can change password, username. Futher fix need: user can change his email. Need to prevent that.

--- a/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
@@ -8,6 +8,8 @@
     </div>
     <div class="col-md-5 col-md-offset-1">
         <h1>Registration</h1>
-        {{ render(controller('FOSUserBundle:Registration:register')) }}
+
+            {% include "FOSUserBundle:Registration:register_content.html.twig" %}
+
     </div>
 {% endblock fos_user_content %}
