--- a/src/Corvus/MainBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/layout.html.twig
@@ -7,22 +7,25 @@
     </head>
     <body>
 
-
-        {% if app.request.hasPreviousSession %}
-            {% for type, messages in app.session.flashbag.all() %}
-                {% for message in messages %}
-                    <div class="flash-{{ type }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endfor %}
-        {% endif %}
-
         <div class="container-fluid login-wrapper">
             <div class="row text-center">
-                <h1>Massive food order</h1>
+                <h1>Massive food ordering system</h1>
             </div>
+
+            {% if app.request.hasPreviousSession %}
+                {% for type, messages in app.session.flashbag.all() %}
+                    {% for message in messages %}
+                        <div class="flash-{{ type }}">
+                            <b> {{ message }}</b>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+
                 <div class="col-md-8 col-md-offset-2">
+
+
+
                     {% block fos_user_content %}
                     {% endblock fos_user_content %}
                 </div>
