--- a/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/dashboard.html.twig
@@ -3,6 +3,7 @@
 {% block fos_user_content %}
     <h1>This is your dashboard</h1>
     <p>Your ID: {{ user_id }}</p>
-    <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+    <a href="{{ path('fos_user_security_logout') }}">Logout</a></br>
+    <a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
 
 {% endblock fos_user_content %}
