test Controller and form

--- a/src/Corvus/MainBundle/Resources/views/test/Contacts.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/test/Contacts.html.twig
@@ -1,7 +1,18 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}CorvusMainBundle:test:Contacts{% endblock %}
+{% block title %}
+CorvusMainBundle:test:Contacts
+
+
+{% endblock %}
 
 {% block body %}
 <h1>Welcome to the test:Contacts page</h1>
+{# app/Resources/views/default/new.html.twig #}
+{{ form_start(form) }}
+{{ form_widget(form) }}
+{{ form_end(form) }}
+<h1>Vardas:
+	{{data}}	
+ </h1>
 {% endblock %}
