--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Hello {{ name }}!
+{% extends "CorvusMainBundle::layout.html.twig" %}
+
+{% block fos_user_content %}
+    <h1>This is your dashboard</h1>
+    <p>Your ID: {{ name }}</p>
+    <a href="{{ path('fos_user_security_logout') }}">Logout</a></br>
+    <a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
+
+{% endblock fos_user_content %}
