--- a/src/Corvus/EventBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/index.html.twig
@@ -10,9 +10,12 @@ dealer {{ dealer }}<br>
             <ul class="list-group">
                 {% for dish in dishes %}
                     <li class="list-group-item">
-                        <b>{{ dish.name }}</b> <br>
-                        kaina: {{ dish.price }}
-                        <div style="float: right;">Kiekis:<input type="number" name="quantity" min="1" max="5"> <button>Prideti</button></div>
+                        <h4>{{ dish.name }}</h4> <br>
+                        {{ dish.description }} <br>
+                        kaina: {{ dish.price }} €
+                        <div style="float: right;">
+                            Kiekis:<input type="number" name="quantity" min="1" max="1000" value="1"> <button>Prideti</button>
+                        </div>
 
                     </li>
                 {% endfor %}
@@ -22,7 +25,20 @@ dealer {{ dealer }}<br>
 
     <div class="col-md-4" style="outline: 1px solid lightgray; height: 200px;" >
         <h3>Krepselis</h3>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
     </div>
+    {{ form_start(form) }}
 
+
+
+
+            {# iterate over each existing tag and render its only field: name #}
+            {% for order in form.orders %}
+                <p>{{ form_row(order.id) }}</p>
+            {% endfor %}
+
+    {{ form_end(form) }}
 
 {% endblock event_content %}
