--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,8 @@
 {% block fos_user_content %}
     <h1>This is your dashboard</h1>
     <p>Your ID: {{ name }}</p>
+    <p>You host {{ count }} events!</p>
+    <p>You participate in {{ ecount }} events!</p>
     <a href="{{ path('fos_user_security_logout') }}">Logout</a></br>
     <a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
 
