--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -3,8 +3,17 @@
 {% block fos_user_content %}
     <h1>This is your dashboard</h1>
     <p>Your ID: {{ name }}</p>
-    <p>You host {{ count }} events!</p>
+    <p>You host {{ hcount }} events!</p>
     <p>You participate in {{ ecount }} events!</p>
+    {% for event in events %}
+        <div>
+            <h3>{{ event.title }}</h3>
+            <p>Status: {{ event.status }}</p>
+            <p>End time: {{ event.endDateTime|date('Y-m-d H:i:s') }}</p>
+            <p>Invited users: {{ event.users.count + event.emails.count}}</p>
+            <p>Users who already ordered: {{ ordered[event.getId] }}</p>
+        </div>
+    {% endfor %}
     <a href="{{ path('fos_user_security_logout') }}">Logout</a></br>
     <a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
 
