--- a/src/Corvus/EventBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/layout.html.twig
@@ -4,12 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <title>Massive food ordering system</title>
     </head>
     <body>
 
         <div class="container-fluid login-wrapper">
             <div class="row text-center">
                 <h1>Massive food ordering system</h1>
+                <a href="{{ path('fos_user_security_logout') }}">Logout</a></br>
+                <a href="{{ path('fos_user_profile_show') }}">Your Profile</a><br>
+                <a href="{{ path('corvus_main') }}">Dashboard</a>
             </div>
 
 
