--- a/src/Corvus/EventBundle/Resources/views/prototype.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/prototype.html.twig
@@ -1,2 +1,2 @@
-id{{ form_widget(form.dish_id, {'value' : '__idvalue__'} ) }}<br>
-Q{{ form_widget(form.quantity, {'value' : '__qvalue__'} ) }}
+{{ form_widget(form.dish_id, {'value' : '__idvalue__', 'type' : 'hidden'} ) }}
+{{ form_widget(form.quantity, {'value' : '__qvalue__', 'type' : 'hidden'} ) }}
