--- a/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
@@ -35,12 +35,13 @@
                 </tr>
             </thead>
             <tbody>
+            {{ form_start(form) }}
             {% for order in orders %}
                 <tr>
-                    <td>{{ order.orders.dish.name | raw}}</td>
+                    <td>{{ order.orders.dish.name | raw}} {{ order.orders.dish.id }}</td>
                     <td>{{ order.quantity_sum | raw}}</td>
                     <td>{{ order.price_sum | raw}}</td>
-                    <td>X</td>
+                    <td>{{ form_label(form.dish_id[order.orders.dish.id]) }}{{ form_widget(form.dish_id[order.orders.dish.id]) }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -52,9 +53,9 @@
         <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px;">
             <h4>Approximately delivery time</h4>
             <div >
-                {{ form_start(form) }}
 
                 {{ form_widget(form.dueDate) }}
+
                 <br>
                 {{ form_widget(form.save, { 'attr': {'class': 'btn btn-success'} }) }}
                 <a href="{{ path('corvus_main') }}" class="btn btn-default" role="button">Cancel</a>
