--- a/src/Corvus/MainBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/layout.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="https://code.jquery.com/jquery-2.1.4.js" type="text/javascript"></script>
     </head>
     <body>
 
