Add Event Repository class. Fix ome routes

--- a/src/Corvus/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -6,5 +6,5 @@
 
     <a href="{{ path('fos_user_profile_edit') }}">Edit profile</a></br>
     <a href="{{ path('fos_user_change_password') }}">Change password</a></br>
-    <a href="{{ path('corvus_main') }}">Dashboard</a>
+    <a href="{{ path('dashboard') }}">Dashboard</a>
 </div>
