Add dashboard styles.

--- a/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
@@ -6,7 +6,7 @@
     <a href="#path('review_order', {'id': eid})" class="btn btn-primary">Review order</a>
 {% endmacro %}
 
-{% macro review(eid) %}
+{% macro payments(eid) %}
     <a href="#path('event_payments', {'id': eid})" class="btn btn-primary">Payments</a>
 {% endmacro %}
 
