--- a/src/Corvus/EventBundle/Resources/views/Default/editEvent.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/editEvent.html.twig
@@ -5,9 +5,9 @@
     <link href="{{asset('bundles/event/plugins/css/bootstrap-datetimepicker.min.css')}}" type="text/css" rel="stylesheet">
 {% endblock %}
 {% block body %}
+
         <div class="col-md-6 col-md-offset-3 text-center">
             {{ form_start(form, { 'attr' : {'class' : 'create_event_form'}}) }}
-            {# render the task's only field: description #}
             <div class="form-group">
                 {{ form_label(form.title) }}
                 {{ form_errors(form.dealer) }}
@@ -33,9 +33,14 @@
                 <input class="form-control email_input" type="text"> <button class="btn btn-default email_add" id="add_email_button">Add</button>
             </div>
             <div class="email_list" data-prototype="{{ form_widget(form.emails.vars.prototype.email)|e }}">
-                {#{% for event_email in form.emails %}#}
-                    {#{{ form_widget(event_email.email) }}#}
-                {#{% endfor %}#}
+                {% for user in form.users %}
+                    <div class="email_row">{{ user.vars.value.email }}</div>
+                    {{ form_widget(user.email) }}
+                {% endfor %}
+                {% for event_email in form.emails %}
+                    <div class="email_row">{{ event_email.vars.value.email }}</div>
+                    {{ form_widget(event_email.email) }}
+                {% endfor %}
             </div>
             <a href="{{ path('corvus_main_default_dashboard') }}" class="btn btn-default cancel_event">Cancel</a>
             {{ form_widget(form.submit, {'attr' : { 'class' : 'btn btn-default create_event'}})}}
@@ -47,6 +52,6 @@
 {% block javascripts %}
     <script src="{{asset('bundles/event/plugins/js/moment.min.js')}}" type="text/javascript"></script>
     <script src="{{asset('bundles/event/plugins/js/bootstrap-datetimepicker.min.js')}}" type="text/javascript"></script>
-    <script src="{{asset('bundles/event/js/event.js')}}" type="text/javascript"></script>
+    <script src="{{asset('bundles/event/js/editEvent.js')}}" type="text/javascript"></script>
 
 {% endblock %}
