Fix registration errors.

--- a/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
+++ b/src/Corvus/MainBundle/Resources/views/welcome/welcome.html.twig
@@ -9,7 +9,7 @@
     <div class="col-md-5 col-md-offset-1">
         <h1>Registration</h1>
 
-            {% include "FOSUserBundle:Registration:register_content.html.twig" %}
+            {% include "CorvusUserBundle:Registration:register_content.html.twig" %}
 
     </div>
 {% endblock fos_user_content %}
