--- a/src/Corvus/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,8 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-
-
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+    {{ form_errors(form.email) }}
+    {{ form_errors(form.username) }}
+    {{ form_errors(form.plainPassword.first) }}
+    {{ form_errors(form.plainPassword.second) }}
+
     <div class="form-group">
         {{ form_label(form.email) }}
         {{ form_widget(form.email, {'attr' : {'class': 'form-control'}} ) }}
@@ -18,7 +21,6 @@
     <div class="form-group">
         {{ form_label(form.plainPassword.second) }}
         {{ form_widget(form.plainPassword.second, {'attr' : {'class': 'form-control'}} ) }}
-
     </div>
     <div>
         <input class="btn btn-default" type="submit" value="{{ 'registration.submit'|trans }}" />
